fix: refactor scrollbar colors

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,25 +3,25 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-    background-color: #fff;
+    background-color: #070809;
     width: 16px;
     scrollbar-gutter: stable;
 }
 
 /* background of the scrollbar except button or resizer */
 ::-webkit-scrollbar-track {
-    background-color: #fff;
+    background-color: #070809;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: #a0a0a5;
     border-radius: 16px;
-    border: 5px solid #fff;
+    border: 5px solid #070809;
 }
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: #a0a0a5;
-    border: 4px solid #f4f4f4
+    border: 4px solid #070809;
 }
 
 ::-webkit-scrollbar-button {
